Batch update of generated files

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -410,28 +410,28 @@
     ]
   },
   {
-    "title": "Chuyến biển định mệnh của ngư dân tàu chụp mực",
-    "content": "Vào ngày 21/3, tàu chụp mực của ngư dân Quảng Nam bất ngờ bị sóng đánh chìm khi đang hành nghề trên biển. Sự cố đã khiến 15 ngư dân rơi xuống biển, trong đó một người thiệt mạng và bốn người mất tích. Ông Lê Văn Thiên, một trong những ngư dân may mắn sống sót, đã mô tả lại khoảnh khắc thoát chết đầy kinh hoàng, cho biết tàu chìm nhanh chóng và không có chỗ bám víu. Gia đình và bạn bè của những người mất tích đang mong chờ các cơ quan chức năng tiếp tục tìm kiếm.",
-    "link": "https://vnexpress.net/chuyen-bien-dinh-menh-cua-ngu-dan-tau-chup-muc-4864814.html",
+    "title": "Chuyến đi biển định mệnh của ngư dân tàu chụp mực",
+    "content": "Trong một chuyến đi biển chụp mực, tàu của ngư dân Lê Văn Thiên đã bị sóng lớn đánh chìm, khiến 15 ngư dân rơi xuống biển, trong đó một người chết và bốn người mất tích. Vụ việc xảy ra vào ngày 21/3 khi tàu đang hoạt động cách bờ biển khoảng 50 hải lý. Ông Thiên, người sống sót, đã phải vật lộn để thoát ra khỏi dây thừng siết chặt và may mắn được cứu bởi tàu khác. Gia đình và bạn bè của các nạn nhân vẫn đang hy vọng tìm kiếm những người mất tích.",
+    "link": "https://vnexpress.net/chuyen-di-bien-dinh-menh-cua-ngu-dan-tau-chup-muc-4864814.html",
     "cat": "thoi-su",
     "positivity": 3,
-    "importance": 7,
-    "question": "Chuyến biển định mệnh của ngư dân tàu chụp mực đã xảy ra sự cố gì?",
+    "importance": 8,
+    "question": "Chuyến đi biển chụp mực của ngư dân đã gặp phải sự cố gì?",
     "answers": [
       {
-        "text": "Tàu bị sóng đánh chìm khiến nhiều ngư dân mất tích.",
+        "text": "Tàu bị sóng đánh chìm",
         "correct": true
       },
       {
-        "text": "Tàu bị hỏng động cơ không thể di chuyển.",
+        "text": "Tàu bị hỏng động cơ",
         "correct": false
       },
       {
-        "text": "Ngư dân bị cướp trong chuyến biển.",
+        "text": "Ngư dân gặp bão",
         "correct": false
       },
       {
-        "text": "Tàu bị đắm do va chạm với tàu khác.",
+        "text": "Tàu bị cướp biển",
         "correct": false
       }
     ]
@@ -1905,33 +1905,6 @@
     ]
   },
   {
-    "title": "6 món ăn người tiểu đường nên tránh",
-    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
-    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
-    "answers": [
-      {
-        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
-        "correct": true
-      },
-      {
-        "text": "Chỉ nên ăn trái cây tươi",
-        "correct": false
-      },
-      {
-        "text": "Nên ăn nhiều thịt mỡ",
-        "correct": false
-      },
-      {
-        "text": "Chỉ uống nước ngọt không đường",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Nguyên nhân gây cứng khớp",
     "content": "Cứng khớp là triệu chứng phổ biến do nhiều nguyên nhân khác nhau, bao gồm tư thế không đúng, thoái hóa khớp, viêm khớp, và bệnh gout. Thoái hóa khớp là nguyên nhân chính, dẫn đến đau và hạn chế vận động do sự bào mòn sụn khớp. Các bệnh viêm khớp, như viêm khớp dạng thấp và viêm cột sống dính khớp, cũng gây ra tình trạng cứng khớp, đặc biệt là vào buổi sáng. Chấn thương khớp và chế độ ăn uống kém cũng góp phần làm tăng nguy cơ cứng khớp.",
     "link": "https://vnexpress.net/nguyen-nhan-gay-cung-khop-4864539.html",
@@ -1954,6 +1927,33 @@
       },
       {
         "text": "Chỉ do tuổi tác cao",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "6 món ăn người tiểu đường nên tránh",
+    "content": "Bài viết nêu rõ 6 món ăn mà người tiểu đường nên tránh để kiểm soát đường huyết. Những món ăn này bao gồm thực phẩm giàu tinh bột tinh chế, kẹo ngọt, trái cây sấy khô, thịt mỡ, thực phẩm chiên, và sữa nguyên kem. Việc tránh xa những thực phẩm này có thể giúp người tiểu đường duy trì sức khỏe tốt hơn và giảm nguy cơ biến chứng. Thay vào đó, người bệnh nên lựa chọn các thực phẩm như trái cây ít ngọt và ngũ cốc nguyên hạt để có lợi cho sức khỏe.",
+    "link": "https://vnexpress.net/6-mon-an-nguoi-tieu-duong-nen-tranh-4864505.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người tiểu đường nên tránh những món ăn nào để kiểm soát đường huyết?",
+    "answers": [
+      {
+        "text": "Thực phẩm giàu tinh bột, kẹo ngọt, thịt mỡ, thực phẩm chiên, trái cây sấy khô, sữa nguyên kem",
+        "correct": true
+      },
+      {
+        "text": "Chỉ nên ăn trái cây tươi",
+        "correct": false
+      },
+      {
+        "text": "Nên ăn nhiều thịt mỡ",
+        "correct": false
+      },
+      {
+        "text": "Chỉ uống nước ngọt không đường",
         "correct": false
       }
     ]
@@ -2806,6 +2806,33 @@
     ]
   },
   {
+    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
+    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
+    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
+    "answers": [
+      {
+        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
+        "correct": true
+      },
+      {
+        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
+        "correct": false
+      },
+      {
+        "text": "Cô không có ước mơ trở thành ca sĩ.",
+        "correct": false
+      },
+      {
+        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Bí quyết trở thành thủ khoa toàn trường của \"bà mẹ U40\"",
     "content": "Nguyễn Song Châu, một bà mẹ U40, đã xuất sắc trở thành thủ khoa toàn trường tại Trường Đại học Gia Định với điểm trung bình 3.7/4.0. Dù phải vừa học, vừa làm và chăm sóc con nhỏ, chị vẫn kiên trì theo đuổi ước mơ học tập bằng cách sắp xếp thời gian hợp lý. Châu đã tham gia nhiều hoạt động ngoại khóa và hiện đang làm việc tại các trung tâm Anh ngữ, với mong muốn trở thành giáo viên tiếng Anh trong tương lai.",
     "link": "https://dantri.com.vn/giao-duc/bi-quyet-tro-thanh-thu-khoa-toan-truong-cua-ba-me-u40-20250322205358478.htm",
@@ -2886,33 +2913,6 @@
       },
       {
         "text": "Vì anh muốn đi du lịch vòng quanh thế giới.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "IU: \"Em gái quốc dân\" giàu có xứ Hàn, từng trải qua tuổi thơ khó khăn",
-    "content": "IU, tên thật là Lee Ji Eun, là một trong những ca sĩ và diễn viên nổi tiếng của Hàn Quốc, được biết đến với giọng hát ngọt ngào và nhiều ca khúc thành công. Mặc dù hiện tại sở hữu tài sản gần 50 triệu USD, IU đã trải qua một tuổi thơ khó khăn với nhiều thử thách, bao gồm việc bị bắt nạt và gia đình lâm vào cảnh khốn khó. Cô đã kiên trì theo đuổi ước mơ ca hát và hiện đang gây chú ý với bộ phim \"When life gives you tangerines\". IU không chỉ thành công trong sự nghiệp mà còn tích cực tham gia các hoạt động từ thiện.",
-    "link": "https://dantri.com.vn/giai-tri/iu-em-gai-quoc-dan-giau-co-xu-han-tung-trai-qua-tuoi-tho-kho-khan-20250318195448529.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "IU đã trải qua những khó khăn gì trong tuổi thơ của mình?",
-    "answers": [
-      {
-        "text": "Cô từng bị bắt nạt và gia đình lâm vào cảnh khó khăn.",
-        "correct": true
-      },
-      {
-        "text": "Cô sống trong một gia đình giàu có mà không gặp khó khăn gì.",
-        "correct": false
-      },
-      {
-        "text": "Cô không có ước mơ trở thành ca sĩ.",
-        "correct": false
-      },
-      {
-        "text": "Cô luôn được hỗ trợ từ gia đình trong mọi việc.",
         "correct": false
       }
     ]
@@ -3207,33 +3207,6 @@
       },
       {
         "text": "Khuyến khích phát triển kinh tế địa phương",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Su-34 Nga hạ cánh bằng bụng: Giây phút sinh tử",
-    "content": "Theo thông tin từ kênh Operation Z, một phi hành đoàn của không quân Nga đã thực hiện cú hạ cánh thành công chiếc máy bay Su-34 bằng bụng do trục trặc kỹ thuật khiến bộ càng đáp không bung ra. Sau khi hoàn thành nhiệm vụ, phi công đã quyết định hạ cánh mà không có càng đáp, sử dụng nhiều biện pháp để đảm bảo an toàn cho cả máy bay và bản thân. Cuối cùng, phi công đã giữ cân bằng và hạ cánh an toàn, mặc dù máy bay trượt trên đường băng, tạo ra nhiều tia lửa nhưng không xảy ra cháy nổ.",
-    "link": "https://dantri.com.vn/the-gioi/su-34-nga-ha-canh-bang-bung-giay-phut-sinh-tu-20250322214241381.htm",
-    "cat": "the-gioi",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Cú hạ cánh bằng bụng của Su-34 Nga diễn ra trong hoàn cảnh nào?",
-    "answers": [
-      {
-        "text": "Do bộ càng đáp không bung ra",
-        "correct": true
-      },
-      {
-        "text": "Do thiếu nhiên liệu",
-        "correct": false
-      },
-      {
-        "text": "Do thời tiết xấu",
-        "correct": false
-      },
-      {
-        "text": "Do thiết bị điện tử hỏng hóc",
         "correct": false
       }
     ]
