--- a/home.html
+++ b/home.html
@@ -175,6 +175,37 @@
     ]
   },
   {
+    "title": "Ukraine giành lại ngôi làng đầu tiên ở Lugansk sau 3 năm",
+    "content": "Ukraine đã tuyên bố giành lại ngôi làng Nadia từ tay quân đội Nga ở vùng Lugansk, đánh dấu lần đầu tiên họ tái kiểm soát lãnh thổ tại khu vực này sau 3 năm. Cuộc tấn công kéo dài 30 giờ đã giúp Ukraine thu hồi 3km² lãnh thổ và gây thiệt hại cho hai trung đoàn Nga. Sự kiện này diễn ra trong bối cảnh Ukraine nỗ lực cải thiện vị thế trong cuộc đàm phán hòa bình sắp tới với sự trung gian của Mỹ.",
+    "link": "https://dantri.com.vn/the-gioi/ukraine-gianh-lai-ngoi-lang-dau-tien-o-lugansk-sau-3-nam-20250323213419179.htm",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ukraine đã giành lại ngôi làng nào ở Lugansk?",
+    "answers": [
+      {
+        "text": "Nadia",
+        "correct": true
+      },
+      {
+        "text": "Kiev",
+        "correct": false
+      },
+      {
+        "text": "Kharkiv",
+        "correct": false
+      },
+      {
+        "text": "Lviv",
+        "correct": false
+      },
+      {
+        "text": "Donetsk",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Thí sinh kỳ thi IELTS lại đối mặt với \"bao đề đỏ\"",
     "content": "Sự kiện ngày 22/3 đã gây xôn xao khi thông tin cho rằng đề thi IELTS của cả ba phần Nghe, Đọc, Viết đều được chuyển sang bao đề đỏ (đề dự phòng). Điều này khiến nhiều thí sinh lo lắng, đặc biệt là những người đã chuẩn bị học thuộc những đề thi trước đó. Tuy nhiên, một số thí sinh cho biết đề thi không khác biệt nhiều so với các đề luyện trước đó, và việc thay đổi này chủ yếu ảnh hưởng đến những người mua 'key' để học thuộc.",
     "link": "https://dantri.com.vn/giao-duc/thi-sinh-ky-thi-ielts-lai-doi-mat-voi-bao-de-do-20250323194246758.htm",
@@ -975,6 +1006,33 @@
     ]
   },
   {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -1001,33 +1059,6 @@
       },
       {
         "text": "Ung thư đại tràng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -1439,33 +1470,6 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -1492,6 +1496,33 @@
       },
       {
         "text": "Chơi trò chơi điện tử với bé",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "answers": [
+      {
+        "text": "Bơ, táo, lê, lựu, cam",
+        "correct": true
+      },
+      {
+        "text": "Chuối, dưa hấu, nho",
+        "correct": false
+      },
+      {
+        "text": "Xoài, dứa, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -1690,28 +1721,28 @@
     ]
   },
   {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "title": "Bị ung thư phổi có ăn thịt gà được không?",
+    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
+    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
     "cat": "suc-khoe",
-    "positivity": 5,
+    "positivity": 8,
     "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
     "answers": [
       {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
         "correct": true
       },
       {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "text": "Chỉ nên ăn thịt gà sống.",
         "correct": false
       },
       {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
+        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
         "correct": false
       }
     ]
@@ -1802,28 +1833,28 @@
     ]
   },
   {
-    "title": "Bị ung thư phổi có ăn thịt gà được không?",
-    "content": "Người bệnh ung thư phổi vẫn có thể ăn thịt gà vì đây là nguồn protein dồi dào rất tốt cho sức khỏe. Thịt gà giúp tăng cường sức đề kháng và hỗ trợ phục hồi trong quá trình điều trị. Tuy nhiên, người bệnh cần chú ý đến cách chế biến và liều lượng tiêu thụ, ưu tiên thịt nạc và tránh các phương pháp chiên, rán để giữ lại dinh dưỡng. Lời khuyên từ bác sĩ là nên tham khảo ý kiến chuyên gia dinh dưỡng để xây dựng chế độ ăn phù hợp.",
-    "link": "https://vnexpress.net/bi-ung-thu-phoi-co-an-thit-ga-duoc-khong-4864537.html",
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
     "cat": "suc-khoe",
-    "positivity": 8,
+    "positivity": 5,
     "importance": 7,
-    "question": "Người bị ung thư phổi có nên ăn thịt gà không?",
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
     "answers": [
       {
-        "text": "Có, thịt gà cung cấp protein tốt cho sức khỏe.",
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
         "correct": true
       },
       {
-        "text": "Không, thịt gà không tốt cho bệnh nhân ung thư.",
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
         "correct": false
       },
       {
-        "text": "Chỉ nên ăn thịt gà sống.",
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
         "correct": false
       },
       {
-        "text": "Có, nhưng chỉ ăn thịt gà chiên.",
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -2753,33 +2784,6 @@
     ]
   },
   {
-    "title": "Chiến sự Ukraine 23/3: Kiev \"tất tay\", dốc toàn lực tấn công Belgorod",
-    "content": "Vào ngày 23/3/2025, Ukraine đã quyết định dốc toàn lực tấn công vào tỉnh Belgorod, thể hiện qua việc triển khai các phương tiện chiến đấu hiện đại. Hành động này cho thấy sự chuẩn bị kỹ lưỡng và quyết tâm của Kiev trong việc giành lại quyền kiểm soát khu vực. Trong khi đó, tình hình tại Kursk trở nên phức tạp khi quân đội Ukraine có thể sẽ rút lui khỏi một số làng do thất bại trong các chiến dịch tấn công.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-tat-tay-doc-toan-luc-tan-cong-belgorod-20250323062656449.htm",
-    "cat": "the-gioi",
-    "positivity": 4,
-    "importance": 8,
-    "question": "Tại sao Ukraine quyết định tấn công Belgorod vào ngày 23/3/2025?",
-    "answers": [
-      {
-        "text": "Để dốc toàn lực và giành lại quyền kiểm soát khu vực.",
-        "correct": true
-      },
-      {
-        "text": "Để phản công quân đội Nga tại Kursk.",
-        "correct": false
-      },
-      {
-        "text": "Để củng cố vị trí của NATO trong khu vực.",
-        "correct": false
-      },
-      {
-        "text": "Để tổ chức các cuộc diễn tập quân sự lớn.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chiến sự Ukraine 23/3: Kiev thất bại nặng nề ở Kursk, rút lui hỗn loạn",
     "content": "Trong cuộc chiến tại Kursk, Ukraine đã gặp thất bại nặng nề, buộc họ phải rút lui hỗn loạn khỏi các làng Oleshnya và Gogolevka. Các nguồn tin cho biết chiến lược của NATO đã không thể giúp Ukraine vượt qua quân đội Nga, dẫn đến tình trạng bất ổn và thiệt hại lớn cho Kiev. Những phân tích từ các chuyên gia quốc tế đều đồng tình rằng đây là một thất bại nghiêm trọng về mặt vật chất đối với Ukraine.",
     "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-that-bai-nang-ne-o-kursk-rut-lui-hon-loan-20250323062656449.htm",
@@ -2802,6 +2806,33 @@
       },
       {
         "text": "Do địa hình khó khăn",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chiến sự Ukraine 23/3: Kiev \"tất tay\", dốc toàn lực tấn công Belgorod",
+    "content": "Vào ngày 23/3/2025, Ukraine đã quyết định dốc toàn lực tấn công vào tỉnh Belgorod, thể hiện qua việc triển khai các phương tiện chiến đấu hiện đại. Hành động này cho thấy sự chuẩn bị kỹ lưỡng và quyết tâm của Kiev trong việc giành lại quyền kiểm soát khu vực. Trong khi đó, tình hình tại Kursk trở nên phức tạp khi quân đội Ukraine có thể sẽ rút lui khỏi một số làng do thất bại trong các chiến dịch tấn công.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-tat-tay-doc-toan-luc-tan-cong-belgorod-20250323062656449.htm",
+    "cat": "the-gioi",
+    "positivity": 4,
+    "importance": 8,
+    "question": "Tại sao Ukraine quyết định tấn công Belgorod vào ngày 23/3/2025?",
+    "answers": [
+      {
+        "text": "Để dốc toàn lực và giành lại quyền kiểm soát khu vực.",
+        "correct": true
+      },
+      {
+        "text": "Để phản công quân đội Nga tại Kursk.",
+        "correct": false
+      },
+      {
+        "text": "Để củng cố vị trí của NATO trong khu vực.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức các cuộc diễn tập quân sự lớn.",
         "correct": false
       }
     ]
