--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,60 @@
     */
     const newsData = [
   {
+    "title": "Nổ tại quán phở ở TP HCM",
+    "content": "Một vụ nổ đã xảy ra tại quán phở ở khu đô thị Sala, TP Thủ Đức vào tối 23/3, gây thương tích cho một nhân viên và làm hư hại các cửa kính của quán. Vụ nổ được cho là do rò rỉ khí ga khi đầu bếp cố khởi động bếp. Nhiều thực khách và nhân viên hoảng loạn chạy ra ngoài sau tiếng nổ lớn. Cảnh sát đã phong tỏa hiện trường để điều tra.",
+    "link": "https://vnexpress.net/no-tai-quan-pho-o-tp-hcm-4864914.html",
+    "cat": "phap-luat",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Vụ nổ tại quán phở ở TP HCM xảy ra do nguyên nhân gì?",
+    "answers": [
+      {
+        "text": "Rò rỉ khí ga",
+        "correct": true
+      },
+      {
+        "text": "Cháy nổ bom",
+        "correct": false
+      },
+      {
+        "text": "Tai nạn điện",
+        "correct": false
+      },
+      {
+        "text": "Sự cố thiên nhiên",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dừng sáp nhập huyện, xã theo tiêu chuẩn cũ",
+    "content": "Bộ Nội vụ đã đề nghị các tỉnh thành tạm dừng việc trình đề án sắp xếp, thành lập đơn vị hành chính cấp huyện, xã theo các tiêu chuẩn cũ đã được Ủy ban Thường vụ Quốc hội ban hành. Các địa phương cũng được yêu cầu tạm dừng thẩm định và lập hồ sơ địa giới đơn vị hành chính, cũng như xây dựng quy hoạch tổng thể cho giai đoạn đến năm 2030 và tầm nhìn đến năm 2045. Đến khi có chủ trương mới từ cấp có thẩm quyền, các tiêu chuẩn cũ sẽ không còn được áp dụng.",
+    "link": "https://vnexpress.net/dung-sap-nhap-huyen-xa-theo-tieu-chuan-cu-4864910.html",
+    "cat": "thoi-su",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Tại sao Bộ Nội vụ đề nghị dừng sáp nhập huyện, xã theo tiêu chuẩn cũ?",
+    "answers": [
+      {
+        "text": "Bộ Nội vụ muốn chờ chủ trương mới từ cấp có thẩm quyền.",
+        "correct": true
+      },
+      {
+        "text": "Các tỉnh thành không có đủ nhân lực để thực hiện.",
+        "correct": false
+      },
+      {
+        "text": "Việc sáp nhập sẽ gây khó khăn trong quản lý hành chính.",
+        "correct": false
+      },
+      {
+        "text": "Tiêu chuẩn cũ đã không còn phù hợp với thực tế.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tuần tới giá vàng sẽ diễn biến ra sao?",
     "content": "Giá vàng tuần tới dự kiến sẽ có nhiều biến động khi giá vàng thế giới vừa trải qua một đợt giảm mạnh xuống còn 3.000 USD/ounce trước khi phục hồi lên 3.024 USD/ounce. Giá vàng trong nước cũng đã giảm đến 3 triệu đồng/lượng so với mức đỉnh. Các chuyên gia dự báo rằng giá vàng có thể giảm thêm khoảng 5 triệu đồng/lượng nếu các căng thẳng thương mại được giải quyết, và một số khảo sát cho thấy nhiều nhà đầu tư vẫn lạc quan về khả năng giá vàng sẽ tăng trong tương lai.",
     "link": "https://tuoitre.vn/tuan-toi-gia-vang-se-dien-bien-ra-sao-20250323220748894.htm",
@@ -1820,33 +1874,6 @@
     ]
   },
   {
-    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
-    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
-    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Những loại quả nào giúp giảm cholesterol?",
-    "answers": [
-      {
-        "text": "Bơ, táo, lê, lựu, cam",
-        "correct": true
-      },
-      {
-        "text": "Chuối, dưa hấu, nho",
-        "correct": false
-      },
-      {
-        "text": "Xoài, dứa, kiwi",
-        "correct": false
-      },
-      {
-        "text": "Nho khô, hạt chia, bưởi",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bác bảo vệ gây sốt vì khéo dỗ bé gái chờ mẹ đến đón muộn",
     "content": "Bác bảo vệ Liu Jie, làm việc tại một trường mẫu giáo ở Sơn Đông, Trung Quốc, đã thu hút sự chú ý trên mạng xã hội khi ân cần dỗ dành bé gái Tiểu Đào đang chờ mẹ đến đón muộn. Khi thấy Tiểu Đào buồn bã, bác Liu đã bế bé và thực hiện một điệu nhảy vui vẻ để làm cô bé vui trở lại. Hành động này không chỉ giúp Tiểu Đào cảm thấy hạnh phúc mà còn thể hiện sự quan tâm và tình yêu thương của bác bảo vệ đối với trẻ nhỏ.",
     "link": "https://dantri.com.vn/giao-duc/bac-bao-ve-gay-sot-vi-kheo-do-be-gai-cho-me-den-don-muon-20250319110703515.htm",
@@ -1900,6 +1927,33 @@
       },
       {
         "text": "Bông cải xanh, bắp cải, đậu xanh",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "5 quả giàu chất xơ giúp giảm cholesterol",
+    "content": "Bài viết giới thiệu về 5 loại quả giàu chất xơ có tác dụng giảm cholesterol, bao gồm bơ, táo, lê, lựu và cam. Những loại quả này không chỉ cung cấp chất xơ mà còn chứa các chất chống oxy hóa, giúp cải thiện sức khỏe tim mạch và giảm tình trạng viêm nhiễm. Các loại quả này cũng giúp cảm giác no lâu hơn và hỗ trợ tiêu hóa, điều chỉnh lượng cholesterol xấu (LDL).",
+    "link": "https://vnexpress.net/5-qua-giau-chat-xo-giup-giam-cholesterol-4864653.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Những loại quả nào giúp giảm cholesterol?",
+    "answers": [
+      {
+        "text": "Bơ, táo, lê, lựu, cam",
+        "correct": true
+      },
+      {
+        "text": "Chuối, dưa hấu, nho",
+        "correct": false
+      },
+      {
+        "text": "Xoài, dứa, kiwi",
+        "correct": false
+      },
+      {
+        "text": "Nho khô, hạt chia, bưởi",
         "correct": false
       }
     ]
@@ -2071,37 +2125,6 @@
     ]
   },
   {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
-    "answers": [
-      {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây hại về mặt tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
     "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
     "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
@@ -2124,33 +2147,6 @@
       },
       {
         "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
-    "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
-    "answers": [
-      {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
-        "correct": true
-      },
-      {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
@@ -2205,6 +2201,64 @@
       },
       {
         "text": "Có, nhưng chỉ ăn thịt gà chiên.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "answers": [
+      {
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
+    "answers": [
+      {
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây hại về mặt tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -2554,37 +2608,6 @@
     ]
   },
   {
-    "title": "Xúc động chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\"",
-    "content": "Chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" diễn ra vào tối 22/3 đã tôn vinh những đóng góp to lớn của phụ nữ Việt Nam trong lịch sử. Được tổ chức bởi Hội Liên hiệp Phụ nữ Hà Nội và Đài PT-TH Hà Nội, chương trình có sự tham gia của nhiều nghệ sĩ nổi tiếng và tái hiện lại phong trào \"Ba đảm đang\" khởi nguồn 60 năm trước tại Đan Phượng. Chương trình không chỉ là một lời tri ân mà còn nhắc nhở về trách nhiệm gìn giữ và phát huy truyền thống tốt đẹp của phụ nữ Việt Nam.",
-    "link": "https://dantri.com.vn/giai-tri/xuc-dong-chuong-trinh-nghe-thuat-sang-mai-truyen-thong-phu-nu-ba-dam-dang-20250323175226542.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Chương trình \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" được tổ chức vào ngày nào?",
-    "answers": [
-      {
-        "text": "22/3",
-        "correct": true
-      },
-      {
-        "text": "23/3",
-        "correct": false
-      },
-      {
-        "text": "21/3",
-        "correct": false
-      },
-      {
-        "text": "20/3",
-        "correct": false
-      },
-      {
-        "text": "25/3",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Vì sao nam giới không thể mang thai?",
     "content": "Nam giới không thể mang thai do thiếu các cơ quan sinh sản cần thiết như tử cung và buồng trứng, cũng như hormone để duy trì thai kỳ. Một số trường hợp nam giới chuyển giới vẫn có thể mang thai nếu chưa phẫu thuật cắt bỏ tử cung và ngừng sử dụng hormone testosterone. Cơn đau đẻ mà phụ nữ trải qua là một dạng đau sinh lý khác biệt mà nam giới không thể cảm nhận được, mặc dù có thể sử dụng máy mô phỏng để trải nghiệm cảm giác này. Tuy nhiên, việc này có thể gây ra đau đớn và không được khuyến khích.",
     "link": "https://vnexpress.net/vi-sao-nam-gioi-khong-the-mang-thai-4864609.html",
@@ -2611,6 +2634,37 @@
       },
       {
         "text": "Nam giới không thể mang thai do thiếu sức khỏe.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Xúc động chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\"",
+    "content": "Chương trình nghệ thuật \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" diễn ra vào tối 22/3 đã tôn vinh những đóng góp to lớn của phụ nữ Việt Nam trong lịch sử. Được tổ chức bởi Hội Liên hiệp Phụ nữ Hà Nội và Đài PT-TH Hà Nội, chương trình có sự tham gia của nhiều nghệ sĩ nổi tiếng và tái hiện lại phong trào \"Ba đảm đang\" khởi nguồn 60 năm trước tại Đan Phượng. Chương trình không chỉ là một lời tri ân mà còn nhắc nhở về trách nhiệm gìn giữ và phát huy truyền thống tốt đẹp của phụ nữ Việt Nam.",
+    "link": "https://dantri.com.vn/giai-tri/xuc-dong-chuong-trinh-nghe-thuat-sang-mai-truyen-thong-phu-nu-ba-dam-dang-20250323175226542.htm",
+    "cat": "giai-tri",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Chương trình \"Sáng mãi truyền thống phụ nữ Ba đảm đang\" được tổ chức vào ngày nào?",
+    "answers": [
+      {
+        "text": "22/3",
+        "correct": true
+      },
+      {
+        "text": "23/3",
+        "correct": false
+      },
+      {
+        "text": "21/3",
+        "correct": false
+      },
+      {
+        "text": "20/3",
+        "correct": false
+      },
+      {
+        "text": "25/3",
         "correct": false
       }
     ]
@@ -3134,33 +3188,6 @@
     ]
   },
   {
-    "title": "Chiến sự Ukraine 23/3: Kiev thất bại nặng nề ở Kursk, rút lui hỗn loạn",
-    "content": "Trong cuộc chiến tại Kursk, Ukraine đã gặp thất bại nặng nề, buộc họ phải rút lui hỗn loạn khỏi các làng Oleshnya và Gogolevka. Các nguồn tin cho biết chiến lược của NATO đã không thể giúp Ukraine vượt qua quân đội Nga, dẫn đến tình trạng bất ổn và thiệt hại lớn cho Kiev. Những phân tích từ các chuyên gia quốc tế đều đồng tình rằng đây là một thất bại nghiêm trọng về mặt vật chất đối với Ukraine.",
-    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-that-bai-nang-ne-o-kursk-rut-lui-hon-loan-20250323062656449.htm",
-    "cat": "thoi-su",
-    "positivity": 2,
-    "importance": 8,
-    "question": "Tại sao Ukraine lại thất bại ở Kursk?",
-    "answers": [
-      {
-        "text": "Vì chiến thuật không hiệu quả của NATO",
-        "correct": true
-      },
-      {
-        "text": "Do thiếu vũ khí",
-        "correct": false
-      },
-      {
-        "text": "Vì quân đội Nga mạnh hơn",
-        "correct": false
-      },
-      {
-        "text": "Do địa hình khó khăn",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chiến sự Ukraine 23/3: Kiev \"tất tay\", dốc toàn lực tấn công Belgorod",
     "content": "Vào ngày 23/3/2025, Ukraine đã quyết định dốc toàn lực tấn công vào tỉnh Belgorod, thể hiện qua việc triển khai các phương tiện chiến đấu hiện đại. Hành động này cho thấy sự chuẩn bị kỹ lưỡng và quyết tâm của Kiev trong việc giành lại quyền kiểm soát khu vực. Trong khi đó, tình hình tại Kursk trở nên phức tạp khi quân đội Ukraine có thể sẽ rút lui khỏi một số làng do thất bại trong các chiến dịch tấn công.",
     "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-tat-tay-doc-toan-luc-tan-cong-belgorod-20250323062656449.htm",
@@ -3183,6 +3210,33 @@
       },
       {
         "text": "Để tổ chức các cuộc diễn tập quân sự lớn.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Chiến sự Ukraine 23/3: Kiev thất bại nặng nề ở Kursk, rút lui hỗn loạn",
+    "content": "Trong cuộc chiến tại Kursk, Ukraine đã gặp thất bại nặng nề, buộc họ phải rút lui hỗn loạn khỏi các làng Oleshnya và Gogolevka. Các nguồn tin cho biết chiến lược của NATO đã không thể giúp Ukraine vượt qua quân đội Nga, dẫn đến tình trạng bất ổn và thiệt hại lớn cho Kiev. Những phân tích từ các chuyên gia quốc tế đều đồng tình rằng đây là một thất bại nghiêm trọng về mặt vật chất đối với Ukraine.",
+    "link": "https://dantri.com.vn/the-gioi/chien-su-ukraine-233-kiev-that-bai-nang-ne-o-kursk-rut-lui-hon-loan-20250323062656449.htm",
+    "cat": "thoi-su",
+    "positivity": 2,
+    "importance": 8,
+    "question": "Tại sao Ukraine lại thất bại ở Kursk?",
+    "answers": [
+      {
+        "text": "Vì chiến thuật không hiệu quả của NATO",
+        "correct": true
+      },
+      {
+        "text": "Do thiếu vũ khí",
+        "correct": false
+      },
+      {
+        "text": "Vì quân đội Nga mạnh hơn",
+        "correct": false
+      },
+      {
+        "text": "Do địa hình khó khăn",
         "correct": false
       }
     ]
