Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,60 @@
     ]
   },
   {
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "answers": [
+      {
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "correct": true
+      },
+      {
+        "text": "Để xây dựng một cầu mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức lễ hội âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do an ninh quốc gia.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hàng loạt xe Mitsubishi khuyến mãi lệ phí trước bạ tháng 3",
+    "content": "Mitsubishi đang triển khai chương trình khuyến mãi lệ phí trước bạ cho nhiều mẫu xe trong tháng 3, hỗ trợ từ 50% đến 100% tùy từng sản phẩm. Các mẫu xe như Xpander và Outlander được giảm giá trực tiếp, trong khi mẫu Xforce khuyến mãi phụ kiện. Chương trình này nhằm kích cầu tiêu dùng và cũng tương tự với các hãng xe khác như Honda và Toyota. Mitsubishi ghi nhận doanh số bán tăng 38% so với cùng kỳ năm trước, với Xpander và Xforce là hai mẫu xe bán chạy nhất.",
+    "link": "https://vnexpress.net/hang-loat-xe-mitsubishi-khuyen-mai-le-phi-truoc-ba-thang-3-4864768.html",
+    "cat": "oto-xe-may",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Mitsubishi đang có chương trình khuyến mãi gì trong tháng 3?",
+    "answers": [
+      {
+        "text": "Khuyến mãi lệ phí trước bạ cho nhiều mẫu xe",
+        "correct": true
+      },
+      {
+        "text": "Giảm giá trực tiếp cho tất cả xe",
+        "correct": false
+      },
+      {
+        "text": "Tặng thêm phụ kiện cho các xe mới",
+        "correct": false
+      },
+      {
+        "text": "Không có chương trình khuyến mãi nào",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
     "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
     "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
@@ -547,33 +601,6 @@
       },
       {
         "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
-    "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
-    "answers": [
-      {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
-        "correct": true
-      },
-      {
-        "text": "Để xây dựng một cầu mới.",
-        "correct": false
-      },
-      {
-        "text": "Để tổ chức lễ hội âm nhạc.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
