Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Xác định 4 đội vào bán kết UEFA Nations League",
+    "content": "Bốn đội tuyển đã xác định được suất vào bán kết UEFA Nations League là Đức, Bồ Đào Nha, Pháp và Tây Ban Nha. Đức giành chiến thắng trước Italy với tổng tỷ số 5-4, trong khi Bồ Đào Nha vượt qua Đan Mạch 5-3. Pháp cần tới loạt đá luân lưu để loại Croatia sau khi hòa tổng tỷ số 2-2, và Tây Ban Nha cũng giành chiến thắng kịch tính trước Hà Lan. Các trận bán kết sẽ diễn ra vào tháng 6/2025 tại Đức.",
+    "link": "https://vnexpress.net/xac-dinh-4-doi-vao-ban-ket-uefa-nations-league-4864929.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Ai là bốn đội vào bán kết UEFA Nations League?",
+    "answers": [
+      {
+        "text": "Đức, Bồ Đào Nha, Pháp, Tây Ban Nha",
+        "correct": true
+      },
+      {
+        "text": "Italy, Đan Mạch, Croatia, Hà Lan",
+        "correct": false
+      },
+      {
+        "text": "Bồ Đào Nha, Tây Ban Nha, Hà Lan, Croatia",
+        "correct": false
+      },
+      {
+        "text": "Pháp, Đức, Đan Mạch, Italy",
+        "correct": false
+      },
+      {
+        "text": "Tây Ban Nha, Pháp, Đức, Croatia",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ferrari bị hủy kết quả tại Grand Prix Trung Quốc",
     "content": "Ferrari đã bị hủy kết quả thi đấu tại Grand Prix Trung Quốc do chiếc xe của Charles Leclerc nhẹ hơn trọng lượng tối thiểu sau khi kiểm tra, trong khi tấm ván gầm xe của Lewis Hamilton không đạt tiêu chuẩn về độ dày. Các tay đua Leclerc và Hamilton cùng với Pierre Gasly đều bị phạt sau khi ban tổ chức xác nhận vi phạm quy định kỹ thuật. Kết quả này đã làm thay đổi đáng kể thứ tự xếp hạng, khiến Ferrari tụt lại phía sau trong bảng xếp hạng đội đua.",
     "link": "https://vnexpress.net/ferrari-bi-huy-ket-qua-tai-grand-prix-trung-quoc-4864928.html",
@@ -309,37 +340,6 @@
       },
       {
         "text": "Vợ ông chỉ bị cảm lạnh thông thường.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ronaldo ghi bàn và hỏng phạt đền trong chiến thắng của Bồ Đào Nha",
-    "content": "Trong trận tứ kết UEFA Nations League, Cristiano Ronaldo ghi một bàn nhưng cũng hỏng phạt đền trong chiến thắng 5-2 của Bồ Đào Nha trước Đan Mạch, tổng tỷ số 5-3. Trận đấu diễn ra kịch tính với nhiều pha rượt đuổi tỷ số và Ronaldo, mặc dù bỏ lỡ một số cơ hội, đã góp mặt trong bàn thắng quan trọng. Francisco Trincao là người tỏa sáng với hai bàn thắng trong hiệp phụ, giúp Bồ Đào Nha giành quyền vào bán kết gặp Đức.",
-    "link": "https://vnexpress.net/ronaldo-ghi-ban-va-hong-phat-den-trong-chien-thang-cua-bo-dao-nha-4864920.html",
-    "cat": "the-thao",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ronaldo đã ghi bao nhiêu bàn trong trận đấu với Đan Mạch?",
-    "answers": [
-      {
-        "text": "1 bàn",
-        "correct": true
-      },
-      {
-        "text": "2 bàn",
-        "correct": false
-      },
-      {
-        "text": "0 bàn",
-        "correct": false
-      },
-      {
-        "text": "3 bàn",
-        "correct": false
-      },
-      {
-        "text": "4 bàn",
         "correct": false
       }
     ]
