Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -552,6 +552,33 @@
     ]
   },
   {
+    "title": "Sốc nhiễm khuẩn sau ăn tiết canh vịt",
+    "content": "Sau khi ăn tiết canh vịt, chị Nguyệt, 43 tuổi, đã nhập viện vì sốc nhiễm khuẩn với các triệu chứng như nôn, sốt cao và huyết áp thấp. Bác sĩ đã chẩn đoán chị bị nhiễm trùng nặng do vi khuẩn Serratia liquefaciens và tiến hành điều trị khẩn cấp. Sau 24 giờ điều trị tích cực, tình trạng của chị đã cải thiện và được xuất viện sau 8 ngày. Bác sĩ khuyến cáo mọi người nên tránh ăn tiết canh và các món sống nhằm giảm nguy cơ ngộ độc thực phẩm.",
+    "link": "https://vnexpress.net/soc-nhiem-khuan-sau-an-tiet-canh-vit-4864945.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Tại sao chị Nguyệt bị sốc nhiễm khuẩn sau khi ăn tiết canh vịt?",
+    "answers": [
+      {
+        "text": "Vì chị bị nhiễm vi khuẩn Serratia liquefaciens sau khi ăn tiết canh vịt.",
+        "correct": true
+      },
+      {
+        "text": "Vì chị không ăn uống đầy đủ dinh dưỡng.",
+        "correct": false
+      },
+      {
+        "text": "Vì chị bị virus cúm gia cầm.",
+        "correct": false
+      },
+      {
+        "text": "Vì chị đã ăn quá nhiều món ăn khác nhau.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Cậu bé nhặt bóng trở thành người hùng khi Đức loại Italy",
     "content": "Trong trận tứ kết lượt về Nations League tối 23/3, cậu bé nhặt bóng Noel Urbaniack đã có một khoảnh khắc đáng nhớ khi nhanh chóng ném bóng cho Joshua Kimmich thực hiện đá phạt góc, tạo điều kiện cho Jamal Musiala ghi bàn cho đội tuyển Đức. Mặc dù Italy đã gỡ hòa trận đấu, Đức vẫn giành chiến thắng với tỷ số 5-4 và tiến vào bán kết. Urbaniack đã nhận được trái bóng có chữ ký của các tuyển thủ Đức như một món quà tri ân cho sự nhanh nhạy của mình.",
     "link": "https://vnexpress.net/cau-be-nhat-bong-tro-thanh-nguoi-hung-khi-duc-loai-italy-4864949.html",
@@ -1058,28 +1085,28 @@
     ]
   },
   {
-    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
-    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
-    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
-    "cat": "thoi-su",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
+    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
+    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
     "answers": [
       {
-        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "text": "Trở thành công an hoặc bác sĩ",
         "correct": true
       },
       {
-        "text": "Để xây dựng một cầu mới.",
+        "text": "Trở thành họa sĩ",
         "correct": false
       },
       {
-        "text": "Để tổ chức lễ hội âm nhạc.",
+        "text": "Trở thành cầu thủ bóng đá",
         "correct": false
       },
       {
-        "text": "Vì lý do an ninh quốc gia.",
+        "text": "Trở thành nhạc sĩ",
         "correct": false
       }
     ]
@@ -1112,33 +1139,6 @@
     ]
   },
   {
-    "title": "Ước mơ khỏe mạnh của cậu bé ung thư",
-    "content": "Cậu bé Chí Trung 5 tuổi ở Cà Mau đang điều trị ung thư máu và chỉ được về nhà thăm mẹ ba lần trong gần một năm qua. Mặc dù phải chịu đựng nhiều cơn đau đớn, Trung luôn giữ tinh thần lạc quan và mong muốn được khỏe mạnh để thực hiện ước mơ trở thành công an hoặc bác sĩ. Mẹ cậu, chị Như Ý, đã phải vượt qua nhiều khó khăn, vừa chăm sóc con vừa làm việc để kiếm sống. Chương trình \"Mặt trời Hy vọng\" được tổ chức nhằm hỗ trợ trẻ em có hoàn cảnh khó khăn như Trung.",
-    "link": "https://vnexpress.net/uoc-mo-khoe-manh-cua-cau-be-ung-thu-4864413.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Ước mơ của Chí Trung khi khỏe lại là gì?",
-    "answers": [
-      {
-        "text": "Trở thành công an hoặc bác sĩ",
-        "correct": true
-      },
-      {
-        "text": "Trở thành họa sĩ",
-        "correct": false
-      },
-      {
-        "text": "Trở thành cầu thủ bóng đá",
-        "correct": false
-      },
-      {
-        "text": "Trở thành nhạc sĩ",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Trăm năm đổi thay của quảng trường Đông Kinh Nghĩa Thục",
     "content": "Quảng trường Đông Kinh Nghĩa Thục, từng là bãi đất trống ven Hồ Gươm, đã trải qua nhiều biến đổi lớn trong suốt một thế kỷ. Từ thời Pháp thuộc, nơi đây trở thành trung tâm giao thông và cũng là nơi diễn ra nhiều sự kiện quan trọng, bao gồm cả những cuộc xử án chính trị. Sau năm 1945, quảng trường được đặt tên để tưởng nhớ đến ngôi trường dạy chữ quốc ngữ và tư tưởng cách mạng. Qua các giai đoạn lịch sử, quảng trường đã trở thành một phần không thể thiếu trong đời sống người dân Hà Nội, nhưng hiện nay đang đối diện với nhiều thách thức trong việc bảo tồn không gian và văn hóa của nó.",
     "link": "https://vnexpress.net/tram-nam-doi-thay-cua-quang-truong-dong-kinh-nghia-thuc-4864233.html",
@@ -1161,6 +1161,33 @@
       },
       {
         "text": "Chỉ được cải tạo nhẹ nhàng mà không thay đổi chức năng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Cấm xe qua hai đường trung tâm TP HCM hơn một tháng",
+    "content": "Trong hơn một tháng tới, xe cộ sẽ bị cấm đi qua hai đường trung tâm TP HCM là Pasteur và Lê Duẩn để phục vụ thi công các hạng mục chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước. Công tác thi công sẽ được chia thành ba giai đoạn, bắt đầu từ nay cho đến ngày 12/5. Các tài xế được khuyến cáo lựa chọn lộ trình thay thế để tránh ùn tắc giao thông.",
+    "link": "https://vnexpress.net/cam-xe-qua-hai-duong-trung-tam-tp-hcm-hon-mot-thang-4864863.html",
+    "cat": "thoi-su",
+    "positivity": 6,
+    "importance": 7,
+    "question": "Tại sao xe bị cấm qua đường Pasteur và Lê Duẩn ở TP HCM?",
+    "answers": [
+      {
+        "text": "Để thi công chuẩn bị cho lễ kỷ niệm 50 năm thống nhất đất nước.",
+        "correct": true
+      },
+      {
+        "text": "Để xây dựng một cầu mới.",
+        "correct": false
+      },
+      {
+        "text": "Để tổ chức lễ hội âm nhạc.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do an ninh quốc gia.",
         "correct": false
       }
     ]
@@ -2105,33 +2132,6 @@
     ]
   },
   {
-    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
-    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
-    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
-    "cat": "giao-duc",
-    "positivity": 8,
-    "importance": 6,
-    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
-    "answers": [
-      {
-        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
-        "correct": true
-      },
-      {
-        "text": "Vì sinh viên không thích nghỉ Tết.",
-        "correct": false
-      },
-      {
-        "text": "Vì sinh viên đang bận học kỳ cuối.",
-        "correct": false
-      },
-      {
-        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hầu hết mọi người sẽ nhiễm HPV trong cuộc đời",
     "content": "Hầu hết mọi người sẽ nhiễm virus HPV trong cuộc đời, nhưng chỉ một số ít ca có thể dẫn đến ung thư. Virus HPV gồm hơn 200 chủng, trong đó có những chủng nguy cơ thấp không gây ung thư và thường tự khỏi. Tuy nhiên, các chủng nguy cơ cao có thể gây ra 5% tổng số ca ung thư toàn cầu, đặc biệt là ung thư cổ tử cung. Vaccine HPV có thể ngăn ngừa hơn 90% các bệnh ung thư do virus này gây ra, nhưng tỷ lệ tiêm vaccine ở Việt Nam còn thấp.",
     "link": "https://vnexpress.net/hau-het-moi-nguoi-se-nhiem-hpv-trong-cuoc-doi-4864744.html",
@@ -2158,6 +2158,33 @@
       },
       {
         "text": "Ung thư đại tràng",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Thông báo làm sinh viên thốt lên \"trường sống vội quá, em theo không kịp\"",
+    "content": "Trường Đại học Công thương TPHCM đã công bố lịch nghỉ Tết Nguyên đán 2026 vào tháng 3, khiến nhiều sinh viên cảm thấy nôn nao và thốt lên rằng \"trường sống vội quá, em theo không kịp\". Thông báo này đã nhận được nhiều phản hồi tích cực từ sinh viên với hàng loạt bình luận hài hước trên mạng xã hội. Lịch nghỉ Tết kéo dài 4 tuần từ 9/2/2026 đến 8/3/2026 nhằm giúp sinh viên và cán bộ có thời gian nghỉ ngơi, đồng thời tránh tình trạng quá tải trong những ngày cao điểm gần Tết.",
+    "link": "https://dantri.com.vn/giao-duc/thong-bao-lam-sinh-vien-thot-len-truong-song-voi-qua-em-theo-khong-kip-20250323072426482.htm",
+    "cat": "giao-duc",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao sinh viên Trường Đại học Công thương TPHCM lại cảm thấy nôn nao khi đọc thông báo nghỉ Tết?",
+    "answers": [
+      {
+        "text": "Vì trường công bố lịch nghỉ Tết sớm hơn dự kiến.",
+        "correct": true
+      },
+      {
+        "text": "Vì sinh viên không thích nghỉ Tết.",
+        "correct": false
+      },
+      {
+        "text": "Vì sinh viên đang bận học kỳ cuối.",
+        "correct": false
+      },
+      {
+        "text": "Vì trường không cho họ biết lịch nghỉ lễ.",
         "correct": false
       }
     ]
@@ -2820,28 +2847,32 @@
     ]
   },
   {
-    "title": "Nhịp tim chậm thế nào là bất thường?",
-    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
-    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "title": "Hệ lụy 'tình một đêm'",
+    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
+    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
     "cat": "suc-khoe",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
     "answers": [
       {
-        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
         "correct": true
       },
       {
-        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "text": "Chỉ gây hại về mặt tâm lý.",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
         "correct": false
       },
       {
-        "text": "Chỉ cần theo dõi mà không cần điều trị.",
+        "text": "Giúp cải thiện sức khỏe tâm lý.",
+        "correct": false
+      },
+      {
+        "text": "Tăng cường sức khỏe sinh lý.",
         "correct": false
       }
     ]
@@ -2874,37 +2905,6 @@
     ]
   },
   {
-    "title": "Hệ lụy 'tình một đêm'",
-    "content": "Bài viết đề cập đến hệ lụy của \"tình một đêm\", đặc biệt là ảnh hưởng đến sức khỏe tâm lý và sinh lý của nam giới. Một trường hợp cụ thể là chàng trai 29 tuổi, dù đã xét nghiệm HIV âm tính nhưng vẫn sống trong lo âu và rối loạn tình dục sau khi có quan hệ không bảo vệ. Nhiều trường hợp khác cũng cho thấy nguy cơ mắc bệnh lây truyền qua đường tình dục và những vấn đề pháp lý có thể phát sinh từ kiểu quan hệ này. Các chuyên gia khuyên rằng nam giới nên xây dựng mối quan hệ lành mạnh và luôn sử dụng biện pháp bảo vệ để giảm thiểu rủi ro.",
-    "link": "https://vnexpress.net/he-luy-tinh-mot-dem-4864695.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Hệ lụy của 'tình một đêm' ảnh hưởng đến sức khỏe như thế nào?",
-    "answers": [
-      {
-        "text": "Có thể gây rối loạn lo âu và bệnh lây truyền qua đường tình dục.",
-        "correct": true
-      },
-      {
-        "text": "Chỉ gây hại về mặt tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Giúp cải thiện sức khỏe tâm lý.",
-        "correct": false
-      },
-      {
-        "text": "Tăng cường sức khỏe sinh lý.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Ba bệnh truyền nhiễm có thể bùng phát khi biến đổi khí hậu",
     "content": "Biến đổi khí hậu đang tạo điều kiện cho ba bệnh truyền nhiễm bùng phát, bao gồm cúm, sởi và sốt xuất huyết. Các yếu tố như nhiệt độ ấm lên, đô thị hóa và thay đổi môi trường sống khiến virus dễ dàng lây lan. Đặc biệt, cúm có nguy cơ bùng phát mạnh hơn trong điều kiện khí hậu thay đổi, trong khi sốt xuất huyết gia tăng do mùa mưa và điều kiện thuận lợi cho muỗi sinh sản. Các vaccine phòng chống các bệnh này đã có sẵn và cần thiết cho cả trẻ em và người lớn.",
     "link": "https://vnexpress.net/ba-benh-truyen-nhiem-co-the-bung-phat-khi-bien-doi-khi-hau-4864728.html",
@@ -2927,6 +2927,33 @@
       },
       {
         "text": "Gây ra bệnh tim mạch nhưng không liên quan đến bệnh truyền nhiễm.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Nhịp tim chậm thế nào là bất thường?",
+    "content": "Nhịp tim chậm được định nghĩa là tình trạng nhịp tim dưới 60 nhịp mỗi phút, và có thể ảnh hưởng đến sức khỏe nếu đi kèm với các triệu chứng như tức ngực và hụt hơi. Đối với một số người, nhịp tim 45-55 nhịp mỗi phút có thể bình thường, nhưng nếu có triệu chứng kèm theo, cần thăm khám bác sĩ chuyên khoa. Các nguyên nhân có thể bao gồm rối loạn xung điện ở tim, vấn đề ở nút xoang nhĩ, hoặc block nhĩ thất. Việc chẩn đoán chính xác cần thực hiện các xét nghiệm như điện tâm đồ hoặc siêu âm tim.",
+    "link": "https://vnexpress.net/nhip-tim-cham-the-nao-la-bat-thuong-4864606.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Nhịp tim chậm dưới 60 nhịp mỗi phút có ảnh hưởng gì đến sức khỏe không?",
+    "answers": [
+      {
+        "text": "Có, nhịp tim chậm có thể dẫn đến các vấn đề sức khỏe nghiêm trọng.",
+        "correct": true
+      },
+      {
+        "text": "Không, nhịp tim chậm luôn là bình thường.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng nếu dưới 40 nhịp mỗi phút.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ cần theo dõi mà không cần điều trị.",
         "correct": false
       }
     ]
